New Feat: User auth, product, & shoppingcart handler

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,12 @@ FILAMENT_FILESYSTEM_DISK=public
 JWT_SECRET=
 JWT_TTL=86400
 JWT_REFRESH_TTL=128000
+
+# Raja Ongkir API Config 
+RAJA_ONGKIR_ENDPOINT=https://api.rajaongkir.com/starter/cost
+RAJA_ONGKIR_API_KEY=
+RAJA_ONGKIR_ORIGIN_POSTAL_CODE=
+RAJA_ONGKIR_COURIER=jne
+
+SERVICE_FEE=2000
+TAX_PERCENTAGE=11
